# JiPP

./: README.md
Lab 10 - Zadanie 1/: CMakeLists.txt  main.cpp
Lab 10 - Zadanie 2/: main.cpp
Lab 10 - Zadanie 3/: main.cpp
Lab 11 - Zadanie 1/: CMakeLists.txt  main.cpp
Lab 2 - Prosty kalkulator/: CMakeLists.txt  exception.cpp  exception.hpp  main.cpp  math_operation.cpp  math_operation.hpp
Lab 2 - Tablice dwuwymiarowe/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 1/: CMakeLists.txt  main.cpp  obliczenia.cpp  obliczenia.hpp
Lab 3 - Zadanie 10/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 2/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 3/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 4/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 5/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 6/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 7/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 8/: CMakeLists.txt  main.cpp
Lab 3 - Zadanie 9/: CMakeLists.txt  main.cpp
Lab 4 - Zadanie 1/: CMakeLists.txt  main.cpp
Lab 4 - Zadanie 10/: CMakeLists.txt  Figura.cpp  Figura.h  Punkt.cpp  Punkt.h  main.cpp
Lab 4 - Zadanie 11/: CMakeLists.txt  Test.cpp  Test.hpp  main.cpp
Lab 4 - Zadanie 2/: CMakeLists.txt  main.cpp
Projekt 1/: CMakeLists.txt  exception.hpp  main.cpp  matrix.cpp  matrix.hpp
Projekt 1/matrixApp/: CMakeLists.txt  exception.cpp  exception.hpp  main.cpp  matrix.cpp  matrix.hpp
Projekt 1/matrixLib/: CMakeLists.txt
Projekt 1/matrixLib/include/matrixLib/: matrixLib.hpp  matrixOperations.hpp
Projekt 1/matrixLib/src/: matrixLib.cpp  matrixOperations.cpp
(+55 files in other folders)
